--- a/src/View/home.html.twig
+++ b/src/View/home.html.twig
@@ -1,14 +1,18 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bonjour</title>
-    <link rel="icon" href="/assets/images/favicon.png">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
+{% extends 'layout.html.twig' %}
 
-<body>
-    <h1>Hello {{ name }} !</h1>
-</body>
-</html>
+{% block title %}    
+   {{ parent() }}-acceuil
+{% endblock %}
+
+{% block navbar %}
+{% endblock %}
+
+{% block content %}
+
+{% endblock %}
+
+{% block footer %}
+
+{% include "_footer.html.twig" %}
+
+{% endblock %}
